Kubernetes/03-movieapp/workdir/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
      - name: config
        configMap:
          name: api-config
      containers:
      - name: api
        image: localhost:5001/demo:0.1
        args:
        - /movieapp
        - -c
        - /tmp/sample-config.yaml
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /tmp
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
