Kubernetes/03-movieapp/workdir/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.movie-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port:
              number: 80
